--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^2.0.1",
+    "antd-mobile": "^0.9.0",
     "classnames": "^2.2.5",
     "lodash": "^4.14.0",
     "normalize.css": "^4.2.0",
