--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^15.3.2",
     "react-cookie": "^0.4.8",
     "react-dom": "^15.3.2",
+    "react-native": "^0.34.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.5",
@@ -35,7 +36,7 @@
     "shelljs": "^0.7.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^6.5.0",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.4",
@@ -72,6 +73,7 @@
     "open-browser-webpack-plugin": "0.0.2",
     "path": "^0.12.7",
     "postcss-loader": "^0.8.2",
+    "postcss-pxtorem": "^3.3.1",
     "react-hot-loader": "^1.3.0",
     "react-weui": "^0.4.0",
     "redux-devtools": "^3.3.1",
